adding portfolio project links and github, linkedin profile links.

--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Mason stafford | Web Development | Contact</title>
+    <script src="https://kit.fontawesome.com/b7b9a63735.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display:600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="CSS/contact-style.css">
@@ -34,14 +35,16 @@
     <div class="wrapper">
       <main class="bin">
         <h2>Contact</h2>
+        <a href="https://github.com/masonstafford" target="_blank"><i id="gitBadge" class="fab fa-github-square"></i></a>
+        <a href="https://www.linkedin.com/in/mason-stafford-3932b919a/" target="_blank"><i id="linkIn" class="fab fa-linkedin"></i></a>
         <hr> 
         <form action="" class="form-group">
           <label for="exampleInputEmail1">Name</label>
-          <input type="name" class="form-control" id="exampleInputName1" aria-describedby="nameHelp" placeholder="Willy Wonka">
+          <input type="name" class="form-control" id="exampleInputName1" aria-describedby="nameHelp" placeholder="John Doe">
           <small id="nameHelp" class="form-text text-muted"></small>
             <br>
           <label for="exampleInputEmail1">Email</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="WillyWanka@gmail.com">
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="johndoe123@gmail.com">
           <small id="emailHelp" class="form-text text-muted"></small>
            <br>
           <label for="exampleFormControlTextarea1">Message</label>
