--- a/portfolio.html
+++ b/portfolio.html
@@ -38,16 +38,16 @@
           <hr>
         </div>
         <div class="col-sm-12 col-md-6">
-          <img src="https://placehold.it/300x200" alt="">
+          <a href="https://github.com/masonstafford/projone" target="_blank"><img src="./IMG/proj-1-sc.png" alt=""></a>
         </div>
         <div class="col-sm-12 col-md-6">
-          <img src="https://placehold.it/300x200" alt="">
+          <a href="https://github.com/masonstafford/Weather-Dashboard" target="_blank"><img src="./IMG/weatherdash-sc.png" alt=""></a>
         </div>
         <div class="col-sm-12 col-md-6">
-          <img src="https://placehold.it/300x200" alt="">
+          <a href="https://github.com/masonstafford/Work-Day-Scheduler" target="_blank"><img src="./IMG/workday-sc.png" alt=""></a>
         </div>
         <div class="col-sm-12 col-md-6">
-          <img src="https://placehold.it/300x200" alt="">
+          <a href="https://github.com/masonstafford/Password-Generator" target="_blank"><img src="./IMG/passgene-sc.png" alt=""></a>
         </div>
         <div class="col-sm-12 col-md-6">
           <img src="https://placehold.it/300x200" alt="">
