--- a/portfolio.html
+++ b/portfolio.html
@@ -38,19 +38,22 @@
           <hr>
         </div>
         <div class="col-sm-12 col-md-6">
-          <a href="https://github.com/masonstafford/projone" target="_blank"><img src="./IMG/proj-1-sc.png" alt=""></a>
+          <a href="https://github.com/masonstafford/Parmesan" target="_blank"><img src="./IMG/parm.png" alt=""></a>
         </div>
         <div class="col-sm-12 col-md-6">
-          <a href="https://github.com/masonstafford/Weather-Dashboard" target="_blank"><img src="./IMG/weatherdash-sc.png" alt=""></a>
+          <a href="https://github.com/masonstafford/eventplanner" target="_blank"><img src="./IMG/event.png" alt=""></a>
         </div>
         <div class="col-sm-12 col-md-6">
-          <a href="https://github.com/masonstafford/Work-Day-Scheduler" target="_blank"><img src="./IMG/workday-sc.png" alt=""></a>
+          <a href="https://github.com/masonstafford/Team-Info" target="_blank"><img src="./IMG/myteam.png" alt=""></a>
         </div>
         <div class="col-sm-12 col-md-6">
-          <a href="https://github.com/masonstafford/Password-Generator" target="_blank"><img src="./IMG/passgene-sc.png" alt=""></a>
+          <a href="https://github.com/masonstafford/README-generator" target="_blank"><img src="./IMG/readme.png" alt=""></a>
         </div>
         <div class="col-sm-12 col-md-6">
-          <img src="https://placehold.it/300x200" alt="">
+          <a href="https://github.com/masonstafford/Work-Day-Scheduler" target="_blank"></a><img src="./IMG/workday.png" alt="">
+        </div>
+        <div class="col-sm-12 col-md-6">
+          <a href="https://github.com/masonstafford/Weather-Dashboard" target="_blank"></a><img src="./IMG/weather.png" alt="">
         </div>
       </main>
     </div>
